--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     <!-- <script src="SnowFlake.js"></script> -->
-    <script src="BubbleSort.js"></script>
+    <!-- <script src="BubbleSort.js"></script> -->
+    <script src="Clock.js"></script>
   </body>
 </html>
