--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <!-- <script src="SnowFlake.js"></script> -->
     <!-- <script src="BubbleSort.js"></script> -->
-    <script src="Clock.js"></script>
+    <!-- <script src="Clock.js"></script> -->
+    <script src="MousePress.js"></script>
   </body>
 </html>
