input , button , push , pop

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="SnowFlake.js"></script> -->
     <!-- <script src="BubbleSort.js"></script> -->
     <!-- <script src="Clock.js"></script> -->
-    <script src="MousePress.js"></script>
+    <!-- <script src="MousePress.js"></script> -->
+    <script src="InpuAndButton.js"></script>
   </body>
 </html>
