--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="BubbleSort.js"></script> -->
     <!-- <script src="Clock.js"></script> -->
     <!-- <script src="MousePress.js"></script> -->
-    <script src="InpuAndButton.js"></script>
+    <!-- <script src="InpuAndButton.js"></script> -->
+    <script src="Slider.js"></script>
   </body>
 </html>
