jump game example setup

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   </head>
 
   <body>
-    <!-- <script src="SnowFlake.js"></script> -->
-    <!-- <script src="BubbleSort.js"></script> -->
-    <!-- <script src="Clock.js"></script> -->
-    <!-- <script src="MousePress.js"></script> -->
-    <!-- <script src="InpuAndButton.js"></script> -->
-    <script src="Slider.js"></script>
+    <!-- <script src="SnowFlake.js"></script>
+    <script src="BubbleSort.js"></script>
+    <script src="Clock.js"></script>
+    <script src="MousePress.js"></script>
+    <script src="InpuAndButton.js"></script> -->
+    <!-- <script src="Slider.js"></script> -->
+
+
+   <a href="JumpGame.html">Jump Game</a>
   </body>
 </html>
