Space Invader : ship with left right move

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     <script src="InpuAndButton.js"></script> -->
     <!-- <script src="Slider.js"></script> -->
 
+<ul>
+  <li>  <a href="JumpGame.html">Jump Game</a></li>
+  <li>  <a href="TicTacToe/TTT.html">Tic Tac Toe</a></li>
+  <li>  <a href="SpaceInvader/SpcaeInvader.html">Space Invader</a></li>
 
-   <a href="JumpGame.html">Jump Game</a>
-   <a href="TicTacToe/TTT.html">Tic Tac Toe</a>
+
+
+</ul>
+  
   </body>
 </html>
