--- a/SpaceInvader/SpcaeInvader.html
+++ b/SpaceInvader/SpcaeInvader.html
@@ -10,6 +10,7 @@
   <body>
     <script src="ship.js"></script>
     <script src="alien.js"></script>
+    <script src="bullet.js"></script>
     <script src="/SpaceInvader/PlayGround.js"></script>
   </body>
 </html>
